== 0.3.0

* Fixed typo in CLI field name 'Cast by'

== 0.2.0 2009-06-04

* Added console tool 'imdb' for searching and getting movie info.
* Fixed issue #2

== 0.1.0 2009-06-03

* Added Imdb::Search that allows search IMDB for a specific movie.

== 0.0.1 2009-06-03

* First release of the IMDB gem.