@@ -1,6 +1,7 @@
 == 0.3.0
 
 * Fixed typo in CLI field name 'Cast by'
+* Fixed retrieval of multiple directors. (#1)
 
 == 0.2.0 2009-06-04
 
